# ndbioimage

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: pytest.yml
ndbioimage/: __init__.py  jvm.py  transforms.py
ndbioimage/readers/: __init__.py  bfread.py  cziread.py  fijiread.py  metaseriesread.py  ndread.py  seqread.py  tifread.py
py/ndbioimage/: __init__.py  ome.py  rs.py  transforms.py
py/ndbioimage/readers/: bfread.py
src/: axes.rs  bioformats.rs  colors.rs  error.rs  lib.rs  main.rs  metadata.rs  movie.rs  py.rs  reader.rs  stats.rs  tiff.rs  view.rs
tests/: test_open.py  test_slicing.py  test_ufuncs.py
tests/files/: test.tif
