[build-system]
requires = ["maturin>=1.8.2"]
build-backend = "maturin"

[project]
name = "ndbioimage"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
python-source = "py"
features = ["pyo3/extension-module", "python", "gpl-formats"]
module-name = "ndbioimage.ndbioimage_rs"
exclude = ["py/ndbioimage/jassets/*", "py/ndbioimage/deps/*"]

[tool.isort]
line_length = 119
